[no-issue] refactor : update to set default values when no input is provided